@@ -24,12 +24,14 @@ import java.util.*;
 
 public class MessageController implements Initializable, Observer {
     public ScrollPane scrollPaneMessage;
-    public AnchorPane anchorPaneFriends;
     public TextField messageField;
     public Button deleteButton;
     public Button replyButton;
     public ImageView homeImage;
     public Button homeButton;
+    public AnchorPane anchorPaneFriends;
+    public AnchorPane anchorPaneMessage;
+    public ImageView leftImage;
     private Controller service;
     private int userId;
     private int toId;
@@ -45,6 +47,12 @@ public class MessageController implements Initializable, Observer {
         buttons = new ArrayList<>();
         Image image = new Image("file:images/homeButtonImage.jpg");
         homeImage.setImage(image);
+        Image image2 = new Image("file:images/2colors.jpg");
+        leftImage.setImage(image2);
+        showPage();
+    }
+
+    public void showPage(){
         Platform.runLater(() -> {
             ScrollBar tvScrollBar = (ScrollBar) scrollPaneMessage.lookup(".scroll-bar:vertical");
             tvScrollBar.valueProperty().addListener((observable, oldValue, newValue) -> {
@@ -58,7 +66,6 @@ public class MessageController implements Initializable, Observer {
             });
 
         });
-
     }
 
     public void setService(Controller service, int id) {
@@ -94,7 +101,6 @@ public class MessageController implements Initializable, Observer {
             anchorPane.getChildren().add(label);
         }
         int y = 21;
-        messageLabel = new ArrayList<>();
         for (MessageDTO message : messageList) {
             Label labelMess = new Label();
             labelMess.setText(message.getMessage());
@@ -126,7 +132,6 @@ public class MessageController implements Initializable, Observer {
             labelMess.setLayoutY(y);
             y += (40 + (message.getMessage().length() / 4) * 6);
             anchorPane.getChildren().add(labelMess);
-            messageLabel.add(labelMess);
             labelMess.setOnMouseClicked(new EventHandler<MouseEvent>() {
                 @Override
                 public void handle(MouseEvent mouseEvent) {
@@ -147,50 +152,37 @@ public class MessageController implements Initializable, Observer {
             button.setVisible(false);
         }
 
-        int y = 21;
+        int y = 44;
         List<UsersFriendsDTO> friends = service.getFriends(userId);
         buttons = new ArrayList<>();
         for (UsersFriendsDTO friend : friends) {
             Button friendButton = new Button();
             if (friend.getUsera().getId() != userId) {
                 friendButton.setText(friend.getUsera().getFirstName() + " " + friend.getUsera().getLastName());
-                friendButton.setOnAction(new EventHandler<ActionEvent>() {
-                    @Override
-                    public void handle(ActionEvent event) {
-                        Platform.runLater(() -> scrollPaneMessage.setVvalue(scrollPaneMessage.getVmax()));
-                        try {
-                            toId = friend.getUsera().getId();
-                            messageList.clear();
-                            pageNumber = 0;
-                            offset = 0;
-                            System.out.println(messageList);
-                            showMessage();
-                            System.out.println(messageList);
-                            System.out.println("--");
-                        } catch (RepositoryException e) {
-                            e.printStackTrace();
-                        }
+                friendButton.setOnAction(event -> {
+                    toId = friend.getUsera().getId();
+                    try {
+                        toId = friend.getUserb().getId();
+                        messageList.clear();
+                        pageNumber = 0;
+                        offset = 0;
+                        showMessage();
+                    } catch (RepositoryException e) {
+                        e.printStackTrace();
                     }
                 });
             } else {
                 friendButton.setText(friend.getUserb().getFirstName() + " " + friend.getUserb().getLastName());
-                friendButton.setOnAction(new EventHandler<ActionEvent>() {
-                    @Override
-                    public void handle(ActionEvent event) {
-                        Platform.runLater(() -> scrollPaneMessage.setVvalue(scrollPaneMessage.getVmax()));
-
-                        try {
-                            toId = friend.getUserb().getId();
-                            messageList.clear();
-                            pageNumber = 0;
-                            offset = 0;
-                            System.out.println(messageList);
-                            showMessage();
-                            System.out.println(messageList);
-                            System.out.println("--");
-                        } catch (RepositoryException e) {
-                            e.printStackTrace();
-                        }
+                friendButton.setOnAction(event -> {
+                    toId = friend.getUserb().getId();
+                    try {
+                        toId = friend.getUserb().getId();
+                        messageList.clear();
+                        pageNumber = 0;
+                        offset = 0;
+                        showMessage();
+                    } catch (RepositoryException e) {
+                        e.printStackTrace();
                     }
                 });
             }
@@ -204,17 +196,14 @@ public class MessageController implements Initializable, Observer {
             anchorPaneFriends.getChildren().add(button);
         }
     }
-
-    public void sendClicked(ActionEvent actionEvent) {
+    public void sendClicked(){
         Alert alert = new Alert(Alert.AlertType.ERROR);
         String mess = messageField.getText();
         try {
-            service.addNewMessage(userId, Arrays.asList(toId), mess);
+            service.addNewMessage(userId, List.of(toId), mess);
         } catch (RepositoryException | ValidatorException e) {
-            alert.setTitle("Message Here...");
-            alert.setHeaderText("Empty message");
-            alert.setContentText(e.getMessage());
-            alert.setTitle("Warning");
+            alert.setHeaderText(e.getMessage());
+            alert.setContentText("Empty message");
             alert.show();
         }
         messageField.deleteText(0, mess.length());
@@ -222,52 +211,41 @@ public class MessageController implements Initializable, Observer {
 
     public void deleteClicked(int id) {
         Alert alert = new Alert(Alert.AlertType.ERROR);
-        deleteButton.setOnAction(new EventHandler<ActionEvent>() {
-            @Override
-            public void handle(ActionEvent event) {
-                try {
-                    service.removeMessage(id);
-                } catch (RepositoryException e) {
-                    alert.setTitle("Message Here...");
-                    alert.setHeaderText("Select a message, please!");
-                    alert.setContentText(e.getMessage());
-                    alert.setTitle("Warning");
-                    alert.show();
-                }
+        deleteButton.setOnAction(event -> {
+            try {
+                service.removeMessage(id);
+            } catch (RepositoryException e) {
+                alert.setHeaderText("Select a message, please!");
+                alert.setContentText(e.getMessage());
+                alert.setTitle("Warning");
+                alert.show();
             }
         });
     }
 
     public void replyClicked(int id) {
         Alert alert = new Alert(Alert.AlertType.ERROR);
-        replyButton.setOnAction(new EventHandler<ActionEvent>() {
-            @Override
-            public void handle(ActionEvent event) {
-                try {
-                    String mess = messageField.getText();
-                    service.replyMessage(userId, Arrays.asList(toId), mess, id);
-                    messageField.deleteText(0, mess.length());
-                } catch (RepositoryException | ValidatorException e) {
-                    alert.setTitle("Message Here...");
-                    alert.setHeaderText("Empty message");
-                    alert.setContentText(e.getMessage());
-                    alert.setTitle("Warning");
-                    alert.show();
-                }
+        replyButton.setOnAction(event -> {
+            try {
+                String mess = messageField.getText();
+                service.replyMessage(userId, List.of(toId), mess, id);
+                messageField.deleteText(0, mess.length());
+            } catch (RepositoryException | ValidatorException e) {
+                alert.setHeaderText("Error");
+                alert.setContentText("Empty message");
+                alert.show();
             }
         });
     }
 
-    public void replyAllClicked(ActionEvent actionEvent) {
+    public void replyAllClicked(){
         Alert alert = new Alert(Alert.AlertType.ERROR);
         String mess = messageField.getText();
         try {
             service.replyAll(userId, mess);
         } catch (ValidatorException | RepositoryException e) {
-            alert.setTitle("Message Here...");
-            alert.setHeaderText("Empty message");
-            alert.setContentText(e.getMessage());
-            alert.setTitle("Warning");
+            alert.setHeaderText("Error");
+            alert.setContentText("Empty message");
             alert.show();
         }
         messageField.deleteText(0, mess.length());
@@ -277,13 +255,15 @@ public class MessageController implements Initializable, Observer {
     public void update(Observable o, Object arg) {
         try {
             showFriend();
+            pageNumber = 0;
+            offset = 0;
             showMessage();
 
-        } catch (RepositoryException e) {
+        } catch (RepositoryException ignored) {
         }
     }
 
-    public void homeClicked(ActionEvent actionEvent) {
+    public void homeClicked() {
         Stage stage = (Stage) homeButton.getScene().getWindow();
         stage.close();
     }
